--- a/BigShool/Views/Courses/Create.cshtml
+++ b/BigShool/Views/Courses/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model BigShool.Models.CourseViewModel
+﻿@model BigShool.ViewModels.CourseViewModel
 @{
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -20,6 +20,7 @@
     <div class=" form-group">
         @Html.LabelFor(m => m.Time)
         @Html.TextBoxFor(m => m.Time, new { @class = "form-control" })
+
     </div>
     <div class="form-group"></div>
     <div class="form-group"></div>
